https://www.elastic.co/guide/en/apm/agent/go/current/release-notes.html[elastic.co]
endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

[[unreleased]]
=== Unreleased

https://github.com/elastic/apm-agent-go/compare/v1.13.1...master[View commits]

[[release-notes-1.x]]
=== Go Agent version 1.x

[[release-notes-1.13.1]]
==== 1.13.1 - 2021/08/05

- Fix concurrency bugs in breakdown metrics and module/apmhttp.WithClientTrace {pull}997[#(997)]

[[release-notes-1.13.0]]
==== 1.13.0 - 2021/07/28

- Prefer w3c traceparent header over legacy elastic-apm-traceparent {pull}963[#(963)]
- Context.SetUsername now takes precedence over HTTP user info from Context.SetHTTPRequest {pull}973[#(973)]
- module/apmhttp: fix a potential panic in WithClientTrace {pull}989[#(989)]
- add support for go-restful v3 {pull}968[#(968)]
- add fasthttp support {pull}957[#(957)]
- module/apmgin: support multiple routes using the same handler {pull}983[#(983)]
- add apm-server CA cert functionality {pull}982[#(982)]

https://github.com/elastic/apm-agent-go/releases/tag/v1.12.0[View release]

[[release-notes-1.12.0]]
==== 1.12.0 - 2021/05/25

https://github.com/elastic/apm-agent-go/releases/tag/v1.12.0[View release]

- module/apmgrpc: fix status code to outcome mapping {pull}902[#(902)]
- module/apmawssdkgo: add support for instrumenting s3 RPC calls {pull}927[#(927)]
- module/apmawssdkgo: add support for instrumenting dynamodb RPC calls {pull}928[#(928)]
- SpanContext.SetDestinationService is a no-op if either Name or Resource is empty {pull}931[#(931)]
- module/apmawssdkgo: add support for instrumenting sqs RPC calls {pull}933[#(933)]
- module/apmawssdkgo: add support for instrumenting sns RPC calls {pull}938[#(938)]
- Parse "//" comments in SQL/CQL {pull}937[#(937)]