@@ -59,6 +59,7 @@ func WrapRoundTripper(r http.RoundTripper, o ...ClientOption) http.RoundTripper 
 		r:              r,
 		requestName:    ClientRequestName,
 		requestIgnorer: IgnoreNone,
+		spanType:       "external.http",
 	}
 	for _, o := range o {
 		o(rt)
@@ -71,6 +72,7 @@ type roundTripper struct {
 	requestName    RequestNameFunc
 	requestIgnorer RequestIgnorerFunc
 	traceRequests  bool
+	spanType       string
 }
 
 // RoundTrip delegates to r.r, emitting a span if req's context
@@ -102,7 +104,7 @@ func (r *roundTripper) RoundTrip(req *http.Request) (*http.Response, error) {
 	}
 
 	name := r.requestName(req)
-	span := tx.StartSpan(name, "external.http", apm.SpanFromContext(ctx))
+	span := tx.StartSpan(name, r.spanType, apm.SpanFromContext(ctx))
 	var rt *requestTracer
 	if !span.Dropped() {
 		traceContext = span.TraceContext()
@@ -209,5 +211,14 @@ func WithClientRequestName(r RequestNameFunc) ClientOption {
 
 	return ClientOption(func(rt *roundTripper) {
 		rt.requestName = r
+	})
+}
+
+// WithClientSpanType sets the span type for HTTP client requests.
+//
+// Defaults to "external.http".
+func WithClientSpanType(spanType string) ClientOption {
+	return ClientOption(func(rt *roundTripper) {
+		rt.spanType = spanType
 	})
 }
